--- a/example/templates/example/home.html
+++ b/example/templates/example/home.html
@@ -8,6 +8,7 @@
     <div id="div-home-right" class="col-md-8">
         <div class="panel panel-default">
         <div class="panel-heading">Home</div>
+        <div class="panel-heading"><a href="{% url 'edc-consent-home-url' %}">Home Views</a></div>
         </div>
     </div>
 
